@@ -1,0 +1,11 @@
+{
+  "timestamp" : "2022-04-08T01:20:57Z",
+  "count" : 0,
+  "count_minmax" : [ 0, 0 ],
+  "count_prev_day_inc" : 26,
+  "count_prev_day_dec" : 0,
+  "uniques" : 0,
+  "uniques_minmax" : [ 0, 0 ],
+  "uniques_prev_day_inc" : 5,
+  "uniques_prev_day_dec" : 0
+}
