@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-04-07T16:25:06Z",
+  "timestamp" : "2022-04-08T01:20:57Z",
   "count_outdated" : 1158,
   "uniques_outdated" : 302,
-  "count" : 1744,
-  "uniques" : 323,
+  "count" : 1770,
+  "uniques" : 328,
   "clones" : [
     {
       "timestamp": "2022-03-27T00:00:00Z",
@@ -56,10 +56,10 @@
     },
     {
       "timestamp": "2022-04-07T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
+      "count": 27,
+      "count_minmax": [ 1, 27 ],
+      "uniques": 6,
+      "uniques_minmax": [ 1, 6 ]
     }
   ]
 }
