@@ -1,3 +1,9 @@
+2022-04-08T01:20:57Z:
+* notice: last 14d: all unq: 612 18
+* notice: prev accum: outdated-all outdated-unq / all unq: 1158 302 / 1744 323
+* notice: next accum: outdated-all outdated-unq / all unq: 1158 302 / 1770 328
+* notice: prev json diff // prev day diff: unq all: +5 +26 / -0 -0 // +5 +26 / -0 -0
+
 2022-04-07T16:25:06Z:
 * notice: last 14d: all unq: 586 15
 * notice: prev accum: outdated-all outdated-unq / all unq: 1158 302 / 1743 322
